@@ -1,0 +1,6 @@
+# Test the generation of jalrc/jrc opcodes
+        jalr    $31,$2
+        jr      $31
+	li	$2,1
+
+        .p2align 4
